#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT(zan-stats, 0.0.1, www.maben@foxmail.com)
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([cJSON.c])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.
# FIXME: Replace `main' with a function in `-lcurl':
AC_CHECK_LIB([curl], [main])
# FIXME: Replace `main' with a function in `-lm':
AC_CHECK_LIB([m], [main])
# FIXME: Replace `main' with a function in `-lncursesw':
AC_CHECK_LIB([ncurses], [main])
# FIXME: Replace `main' with a function in `-lpanelw':
AC_CHECK_LIB([panel], [main])

# Checks for header files.
AC_CHECK_HEADERS([float.h inttypes.h limits.h stdlib.h string.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_INLINE
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_TYPE_UINT32_T
AC_TYPE_UINT64_T

# Checks for library functions.
AC_FUNC_MALLOC
AC_CHECK_FUNCS([alarm floor memset pow strcasecmp strchr strdup])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
